feat: rating function
